--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.49.0"
+    "sass": "^1.49.0",
+    "seedrandom": "^3.0.5"
   },
   "devDependencies": {
     "eslint": "8.7.0",
