Added Firebase shortcut

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,6 +9,7 @@
       "@util/*": ["src/util/*"],
       "@styles/*": ["styles/*"],
       "@public/*": ["public/*"],
+      "@firebaseApp": ["firebase"]
     }
   }
 }
