--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "clsx": "^1.1.1",
-    "next": "12.0.8",
+    "firebase": "^9.6.4",
+    "next": "^12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.49.0",
